--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@
 *.userosscache
 *.sln.docstates
 
+# User-specific archive files
+*.rar
+*.zip
+*.7z
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
